# gnome-menus

./: .cvsignore  .gitlab-ci.yml  .meson.build.swp  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  configure.in  gnome-menus.doap  meson.build
desktop-directories/: .Makefile.am.swp  .cvsignore  Accessibility.directory.in  Accessories.directory.in  AudioVideo.directory.desktop.in  AudioVideo.directory.in  Desktop.directory.in  Development.directory.in  Education.directory.desktop.in  Education.directory.in  Edutainment.directory.in  Game.directory.in  Games.directory.in  Graphics.directory.desktop.in  Graphics.directory.in  Hardware.directory.in  Internet.directory.in  InternetAndNetwork.directory.in  LookAndFeel.directory.in  Makefile.am  Multimedia.directory.in  Network.directory.in  Office.directory.desktop.in  Office.directory.in  Other.directory.in  Personal.directory.in  Preferences.directory.in  Settings-Accessibility.directory.in  Settings-System.directory.in  Settings.directory.in  System-Settings.directory.in  System-Tools.directory.desktop.in  System-Tools.directory.in  System.directory.in  Utility-Accessibility.directory.in  Utility.directory.desktop.in  X-GNOME-Menu-Applications.directory.desktop.in  X-GNOME-Menu-Applications.directory.in  X-GNOME-Menu-System.directory.in  X-GNOME-Other.directory.in  (+7 more)
layout/: Makefile.am  applications.menu  gnome-applications.menu  preferences.menu  settings.menu
libmenu/: .cvsignore  Makefile.am  canonicalize.c  canonicalize.h  desktop-entries.c  desktop-entries.h  entry-directories.c  entry-directories.h  gmenu-tree.c  gmenu-tree.h  libgnome-menu-3.0-uninstalled.pc.in  libgnome-menu-3.0.pc.in  libgnome-menu-uninstalled.pc.in  libgnome-menu.pc.in  menu-layout.c  menu-layout.h  menu-monitor-backend.h  menu-monitor-fam.c  menu-monitor-gio.c  menu-monitor-inotify.c  menu-monitor-none.c  menu-monitor.c  menu-monitor.h  menu-tree.c  menu-tree.h  menu-util.c  menu-util.h  meson.build
meson/: get-git-sha.sh
po/: .cvsignore  ChangeLog  ChangeLog.pre-git  LINGUAS  Makevars  POTFILES.in  ab.po  af.po  ak.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  (+86 more)
python/: .cvsignore  Makefile.am  gmenu.c  gmenu.pyx
simple-editor/: .cvsignore  Makefile.am  gmenu-simple-editor  gmenu-simple-editor.desktop.in  gmenu-simple-editor.glade  gmenu-simple-editor.in  gmenu-simple-editor.ui
simple-editor/GMenuSimpleEditor/: .cvsignore  Makefile.am  config.py.in  main.py  maindialog.py  menufilewriter.py  menutreemodel.py
util/: .cvsignore  Makefile.am  gnome-menus-ls.js  gnome-menus-ls.py  meson.build  test-menu-spec.c
